--- a/app/globals.css
+++ b/app/globals.css
@@ -644,3 +644,117 @@ textarea.form-field {
 .contact-list tr:nth-child(even) {
   background-color: #f1f1f1;
 }
+
+/* Chat related CSS*/
+.open-chat {
+  z-index: 85;
+  position: fixed;
+  bottom: 16px;
+  right: 20px;
+  width: 36px;
+  height: 36px;
+  border-radius: 18px;
+  background-color: white;
+  display: flex;
+}
+
+.open-chat svg {
+  color: #5061F6;
+  margin: auto;
+}
+
+.chat-container {
+  position: fixed;
+  z-index: 90;
+  bottom: 0;
+  right: 20px;
+  width: 290px;
+  height: 420px;
+  border-radius: 18px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  transform: translateY(100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-out, transform 0.3s ease-out, visibility 0.3s ease-out;
+}
+
+.chat-container--visible {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
+
+.chat-log {
+  flex: 1;
+  overflow-y: auto;
+  padding: 10px 14px;
+}
+
+.chat-title-bar {
+  padding: 10px 14px;
+  background-color: #5061F6;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.chat-title-bar h4 {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-size: 1rem;
+}
+
+.chat-title-bar svg {
+  position: relative;
+}
+
+.chat-messege {
+  margin: 0 60px 5px 0;
+  display: flex;
+}
+
+.chat-messege-inner {
+  background-color: #AFAFAF;
+  color: #fff;
+  padding: 10px 14px;
+  border-radius: 10px;
+  font-size: .85rem;
+}
+
+.chat-messege--self .chat-messege-inner {
+  background-color: #3653F6;
+}
+
+.chat-messege--self {
+  justify-content: flex-end;
+  margin: 00 5px 60px;
+}
+
+.chat-container input {
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  font-family: inherit;
+  font-size: .85rem;
+  padding: 10px;
+  width: 100%;
+  outline: none;
+  border-top: 1px solid #e6e6e6;
+}
+
+.chat-unread-badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: red;
+  color: white;
+  padding: 2px 5px;
+  border-radius: 20px;
+  font-size: .75rem;
+  line-height: 1;
+}
